Closed Bug 1723761 Opened 4 years ago Closed 4 years ago

Scroll linked positioning effect message in console contains outdated link

Categories

(DevTools :: Console, defect)

Firefox 91
defect

Tracking

(firefox92 fixed)

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: aviwoll, Assigned: kats)

References

()

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

I was on a website that Firefox detected as using a scroll linked positioning effect.

Actual results:

Firefox showed a console message of:
This site appears to use a scroll-linked positioning effect. This may not work well with asynchronous panning; see https://developer.mozilla.org/docs/Mozilla/Performance/ScrollLinkedEffects for further details and to join the discussion on related tools and features!

Expected results:

The URL in the console message should have linked to an MDN page that exists.

Component: Untriaged → Console
Product: Firefox → DevTools

It looks like something that regressed in MDN not long ago: https://github.com/mdn/content/issues/1533
But it would be good to update the URL in mozilla-central too.

kats, would you know where it was moved to?

Flags: needinfo?(kats)

(I left a comment for MDN folks at https://github.com/mdn/content/issues/1533#issuecomment-893099531, leaving this ni on me until I get a response as that will determine how we should tackle this error)

This was archived some time ago. The problem is that last month the archive stopped being built along with mdn/content (this was a surprise to me too). There is no intent to bring the archive back.

I'll ask my team member if anything is recoverable from that - or do you know if there is an alterative page that does what you need on mdn?

Best way to track discussion is the github issue https://github.com/mdn/content/issues/1532

Ah I found https://firefox-source-docs.mozilla.org/performance/scroll-linked_effects.html which seems to have the content from that page. I'll update the link to point there.

Assignee: nobody → kats
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(kats)
Summary: Scroll linked positioning effect message in console contains incorrect link → Scroll linked positioning effect message in console contains outdated link

(Note that the source for the firefox-source-docs page is in-tree, at https://searchfox.org/mozilla-central/source/docs/performance/scroll-linked_effects.md, so that's an added benefit)

Pushed by kgupta@mozilla.staktrace.com: https://hg.mozilla.org/integration/autoland/rev/0b8a9e2b85a1 Update outdated URL to new location. r=tnikkel
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch

Thanks for updating this, Kats!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: