Bug 1723761 - Update outdated URL to new location. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D122042